--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-cli --watch && node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,10 +20,10 @@
     "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
     "webpack": "^5.85.0",
-    "wepack-cli": "^0.0.1-security"
+    "wepack-cli": "^0.0.1-security",
+    "uglifyjs-webpack-plugin": "^2.2.0"
   },
   "dependencies": {
-    "@aws-sdk/client-ec2": "^3.345.0",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "@aws-sdk/client-ec2": "^3.345.0"
   }
 }
