--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "declaration-bundler-webpack-plugin": "^1.0.3",
     "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.85.0",
-    "wepack-cli": "^0.0.1-security",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "wepack-cli": "^0.0.1-security"
   },
   "dependencies": {
-    "@aws-sdk/client-ec2": "^3.345.0"
+    "@aws-sdk/client-ec2": "^3.345.0",
+    "@types/uuid": "^9.0.2",
+    "uuid": "^9.0.0"
   }
 }
