--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-ec2": "^3.345.0",
+    "@aws-sdk/client-s3": "^3.348.0",
     "@types/uuid": "^9.0.2",
     "uuid": "^9.0.0"
   }
