--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.117",
     "@types/node": "^20.2.5",
     "@types/webpack": "^5.28.1",
     "@webpack-cli/generators": "^3.0.5",
@@ -29,6 +30,7 @@
     "@aws-sdk/client-s3": "^3.348.0",
     "@t3-oss/env-nextjs": "^0.4.0",
     "@types/uuid": "^9.0.2",
+    "aws-lambda": "^1.0.7",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   }
