working on setting up server

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "moduleResolution": "node",
         "outDir": "./dist",
         "rootDir": ".",
+        "esModuleInterop": true,
         "strict": true,
         "forceConsistentCasingInFileNames": true
     },
