--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.117",
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
     "@types/webpack": "^5.28.1",
     "@webpack-cli/generators": "^3.0.5",
-    "@types/body-parser": "^1.19.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "declaration-bundler-webpack-plugin": "^1.0.3",
@@ -34,6 +34,7 @@
     "@types/uuid": "^9.0.2",
     "aws-lambda": "^1.0.7",
     "body-parser": "^1.20.2",
+    "esbuild": "^0.18.1",
     "express": "^4.18.2",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
