--- a/package.json
+++ b/package.json
@@ -16,16 +16,8 @@
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
-    "@types/webpack": "^5.28.1",
-    "@webpack-cli/generators": "^3.0.5",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "declaration-bundler-webpack-plugin": "^1.0.3",
-    "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.85.0",
-    "wepack-cli": "^0.0.1-security"
+    "esbuild": "^0.18.1"
   },
   "dependencies": {
     "@aws-sdk/client-ec2": "^3.345.0",
@@ -34,7 +26,6 @@
     "@types/uuid": "^9.0.2",
     "aws-lambda": "^1.0.7",
     "body-parser": "^1.20.2",
-    "esbuild": "^0.18.1",
     "express": "^4.18.2",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
