--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.117",
     "@types/body-parser": "^1.19.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
-    "typescript": "^5.1.3",
-    "esbuild": "^0.18.1"
+    "esbuild": "^0.18.1",
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "@aws-sdk/client-ec2": "^3.345.0",
@@ -26,6 +27,7 @@
     "@types/uuid": "^9.0.2",
     "aws-lambda": "^1.0.7",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
