--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-cli --watch && node dist/server.js",
-    "build": "webpack-cli"
+    "dev": "node scripts/build.js",
+    "build": "node scripts/build.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/amqplib": "^0.10.1",
     "@types/aws-lambda": "^8.10.117",
     "@types/body-parser": "^1.19.2",
     "@types/dotenv": "^8.2.0",
@@ -25,6 +26,7 @@
     "@aws-sdk/client-s3": "^3.348.0",
     "@t3-oss/env-nextjs": "^0.4.0",
     "@types/uuid": "^9.0.2",
+    "amqplib": "^0.10.3",
     "aws-lambda": "^1.0.7",
     "body-parser": "^1.20.2",
     "dotenv": "^16.1.4",
