--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node scripts/build.js",
+    "dev:spot": "NODE_ENV=development ts-node packages/spot/index.ts",
     "build": "node scripts/build.js"
   },
   "keywords": [],
