--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:spot": "NODE_ENV=development ts-node packages/spot/index.ts",
+    "dev:spot": "ts-node packages/spot/index.ts",
+    "dev:server": "ts-node packages/backend/index.ts",
     "build": "node scripts/build.js"
   },
   "keywords": [],
@@ -17,20 +18,23 @@
     "@types/body-parser": "^1.19.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.2.5",
-    "esbuild": "^0.18.1",
     "@types/uuid": "^9.0.2",
+    "esbuild": "^0.18.1",
     "typescript": "^5.1.3"
   },
   "dependencies": {
     "@aws-sdk/client-ec2": "^3.345.0",
     "@aws-sdk/client-s3": "^3.348.0",
     "@t3-oss/env-nextjs": "^0.4.0",
+    "@typegoose/typegoose": "^11.4.0",
     "amqplib": "^0.10.3",
     "aws-lambda": "^1.0.7",
     "body-parser": "^1.20.2",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "mongoose": "^7.4.1",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   }
