--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/amqplib": "^0.10.1",
     "@types/aws-lambda": "^8.10.117",
     "@types/body-parser": "^1.19.2",
+    "@types/cron": "^2.4.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
@@ -32,6 +33,7 @@
     "amqplib": "^0.10.3",
     "aws-lambda": "^1.0.7",
     "body-parser": "^1.20.2",
+    "cron": "^2.4.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "mongoose": "^7.4.1",
