--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -2,7 +2,8 @@
     "name": "infra-soul-forge",
     "main": "index.ts",
     "devDependencies": {
-        "@types/node": "^16"
+        "@types/node": "^16",
+        "@types/ssh2": "^1.11.13"
     },
     "dependencies": {
         "@pulumi/aws": "^5.0.0",
@@ -10,6 +11,7 @@
         "@pulumi/pulumi": "^3.0.0",
         "@t3-oss/env-nextjs": "^0.6.0",
         "dotenv": "^16.3.1",
+        "ssh2": "^1.14.0",
         "zod": "^3.21.4"
     }
 }
