--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@types/aws-lambda": "^8.10.117",
     "@types/body-parser": "^1.19.2",
     "@types/cron": "^2.4.0",
+    "@types/dockerode": "^3.3.19",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.2.5",
+    "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.2",
     "esbuild": "^0.18.1",
     "typescript": "^5.1.3"
@@ -34,9 +35,11 @@
     "aws-lambda": "^1.0.7",
     "body-parser": "^1.20.2",
     "cron": "^2.4.0",
+    "dockerode": "^3.3.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "mongoose": "^7.4.1",
+    "redis": "^4.6.7",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   }
