--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.2",
     "esbuild": "^0.18.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@aws-sdk/client-ec2": "^3.345.0",
@@ -39,10 +40,14 @@
     "cron": "^2.4.0",
     "dockerode": "^3.3.5",
     "dotenv": "^16.1.4",
+    "esbuild-plugin-inline-import": "^1.0.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.1",
+    "nanoid": "^4.0.2",
     "redis": "^4.6.7",
+    "ts-loader": "^9.4.4",
     "uuid": "^9.0.0",
+    "webpack": "^5.88.2",
     "zod": "^3.21.4"
   }
 }
