--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/dockerode": "^3.3.19",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/invariant": "^2.2.35",
     "@types/node": "^20.2.5",
     "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.2",
@@ -43,6 +44,7 @@
     "dotenv": "^16.1.4",
     "esbuild-plugin-inline-import": "^1.0.1",
     "express": "^4.18.2",
+    "invariant": "^2.2.4",
     "mongoose": "^7.4.1",
     "nanoid": "^4.0.2",
     "redis": "^4.6.7",
