--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/amqplib": "^0.10.1",
     "@types/aws-lambda": "^8.10.117",
+    "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.19.2",
     "@types/cron": "^2.4.0",
     "@types/dockerode": "^3.3.19",
@@ -38,10 +39,11 @@
     "@typegoose/typegoose": "^11.4.0",
     "amqplib": "^0.10.3",
     "aws-lambda": "^1.0.7",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cron": "^2.4.0",
     "dockerode": "^3.3.5",
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.3.1",
     "esbuild-plugin-inline-import": "^1.0.1",
     "express": "^4.18.2",
     "invariant": "^2.2.4",
