--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.2",
     "esbuild": "^0.18.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3",
     "webpack-cli": "^5.1.4"
   },
