--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
             "@models/*": ["packages/backend/database/models/*"]
         }
     },
+    "ts-node": {
+        "require": ["tsconfig-paths/register"]
+    },
     "exclude": ["**/dist/**"],
     "include": ["packages/**/**.ts", "global.d.ts", "constants/aws-infra.ts"]
 }
