--- a/infra/docker/package.json
+++ b/infra/docker/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docker",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "proxy.js",
   "license": "MIT",
   "dependencies": {
     "http-proxy": "^1.18.1"
