--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "@types/uuid": "^9.0.2",
     "esbuild": "^0.18.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "webpack-cli": "^5.1.4"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "@aws-sdk/client-ec2": "^3.345.0",
