--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "dev:server": "ts-node packages/backend/index.ts",
     "infra:up": "cd ./infra && pulumi up --stack dev -y",
     "infra:down": "cd ./infra && pulumi destroy --stack dev -y",
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js",
+    "gc-server": "graphql-codegen --config codegen-server.yml",
+    "gc": "yarn gc-server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@graphql-codegen/cli": "3.2.2",
+    "@graphql-codegen/client-preset": "2.1.1",
+    "@graphql-codegen/typescript": "^3.0.2",
+    "@graphql-codegen/typescript-graphql-request": "^4.5.8",
+    "@graphql-codegen/typescript-operations": "^3.0.0",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@graphql-codegen/typescript-resolvers": "^3.1.1",
     "@types/amqplib": "^0.10.1",
     "@types/aws-lambda": "^8.10.117",
     "@types/axios": "^0.14.0",
@@ -28,10 +37,13 @@
     "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.2",
     "esbuild": "^0.18.1",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.10",
+    "@apollo/server": "^4.9.1",
     "@aws-sdk/client-ec2": "^3.345.0",
     "@aws-sdk/client-s3": "^3.348.0",
     "@aws-sdk/client-ssm": "^3.385.0",
@@ -46,7 +58,10 @@
     "dotenv": "^16.3.1",
     "esbuild-plugin-inline-import": "^1.0.1",
     "express": "^4.18.2",
+    "graphql": "16.6.0",
+    "graphql-tag": "^2.12.6",
     "invariant": "^2.2.4",
+    "lru-cache": "^8.0.4",
     "mongoose": "^7.4.1",
     "nanoid": "^4.0.2",
     "redis": "^4.6.7",
