--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/invariant": "^2.2.35",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.2.5",
     "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.2",
@@ -61,6 +62,7 @@
     "graphql": "16.6.0",
     "graphql-tag": "^2.12.6",
     "invariant": "^2.2.4",
+    "jsonwebtoken": "^9.0.1",
     "lru-cache": "^8.0.4",
     "mongoose": "^7.4.1",
     "nanoid": "^4.0.2",
