--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@apollo/client": "^3.7.10",
     "@apollo/server": "^4.9.1",
     "@aws-sdk/client-ec2": "^3.345.0",
+    "@aws-sdk/client-ecr": "^3.395.0",
     "@aws-sdk/client-s3": "^3.348.0",
     "@aws-sdk/client-ssm": "^3.385.0",
     "@t3-oss/env-nextjs": "^0.4.0",
