--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "esbuild-plugin-inline-import": "^1.0.1",
     "express": "^4.18.2",
     "graphql": "16.6.0",
+    "graphql-request": "^6.1.0",
     "graphql-tag": "^2.12.6",
     "invariant": "^2.2.4",
     "jsonwebtoken": "^9.0.1",
@@ -65,6 +66,7 @@
     "mongoose": "^7.4.1",
     "nanoid": "^4.0.2",
     "redis": "^4.6.7",
+    "throng": "^5.0.0",
     "ts-loader": "^9.4.4",
     "uuid": "^9.0.0",
     "webpack": "^5.88.2",
