--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,8 +2,38 @@ FROM node:16-alpine
 
 ARG GITHUB_TOKEN
 ARG BRANCH
+ARG AWS_ACCESS_KEY_ID
+ARG AWS_ACCESS_KEY_SECRET
+ARG AWS_REGION
+ARG AWS_ACCOUNT_ID
+ARG RABBITMQ_URL
+ARG DEPLOYMENT_ENV
+ARG SPOT_INSTANCE_ID
+ARG MONGODB_URI
+ARG JWT_SECRET
+ARG DATABASE_NAME
+ARG CHECKPOINT_PATH
+ARG REDIS_HOST
+ARG REMOTE_DOCKER_PASSWORD
+ARG BACKEND_BASE_URL
 
-ENV NODE_ENV=development
+ENV GITHUB_TOKEN=$GITHUB_TOKEN
+ENV BRANCH=$BRANCH
+ENV AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+ENV AWS_ACCESS_KEY_SECRET=$AWS_ACCESS_KEY_SECRET
+ENV AWS_REGION=$AWS_REGION
+ENV AWS_ACCOUNT_ID=$AWS_ACCOUNT_ID
+ENV RABBITMQ_URL=$RABBITMQ_URL
+ENV DEPLOYMENT_ENV=$DEPLOYMENT_ENV
+ENV SPOT_INSTANCE_ID=$SPOT_INSTANCE_ID
+ENV MONGODB_URI=$MONGODB_URI
+ENV JWT_SECRET=$JWT_SECRET
+ENV DATABASE_NAME=$DATABASE_NAME
+ENV CHECKPOINT_PATH=$CHECKPOINT_PATH
+ENV REDIS_HOST=$REDIS_HOST
+ENV REMOTE_DOCKER_PASSWORD=$REMOTE_DOCKER_PASSWORD
+ENV BACKEND_BASE_URL=$BACKEND_BASE_URL
+ENV NODE_ENV=production
 
 WORKDIR /app
 RUN apk add --no-cache git
