--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -5,6 +5,24 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile
+      args:
+        - NODE_ENV=production
+        - GITHUB_TOKEN=${GITHUB_TOKEN}
+        - BRANCH=${BRANCH}
+        - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+        - AWS_ACCESS_KEY_SECRET=${AWS_ACCESS_KEY_SECRET}
+        - AWS_REGION=${AWS_REGION}
+        - AWS_ACCOUNT_ID=${AWS_ACCOUNT_ID}
+        - RABBITMQ_URL=${RABBITMQ_URL}
+        - DEPLOYMENT_ENV=${DEPLOYMENT_ENV}
+        - SPOT_INSTANCE_ID=${SPOT_INSTANCE_ID}
+        - MONGODB_URI=${MONGODB_URI}
+        - JWT_SECRET=${JWT_SECRET}
+        - DATABASE_NAME=${DATABASE_NAME}
+        - CHECKPOINT_PATH=${CHECKPOINT_PATH}
+        - REDIS_HOST=${REDIS_HOST}
+        - REMOTE_DOCKER_PASSWORD=${REMOTE_DOCKER_PASSWORD}
+        - BACKEND_BASE_URL=${BACKEND_BASE_URL}
     ports:
       - "80:80"
     environment:
@@ -19,6 +37,24 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile
+      args:
+        - NODE_ENV=production
+        - GITHUB_TOKEN=${GITHUB_TOKEN}
+        - BRANCH=${BRANCH}
+        - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+        - AWS_ACCESS_KEY_SECRET=${AWS_ACCESS_KEY_SECRET}
+        - AWS_REGION=${AWS_REGION}
+        - AWS_ACCOUNT_ID=${AWS_ACCOUNT_ID}
+        - RABBITMQ_URL=${RABBITMQ_URL}
+        - DEPLOYMENT_ENV=${DEPLOYMENT_ENV}
+        - SPOT_INSTANCE_ID=${SPOT_INSTANCE_ID}
+        - MONGODB_URI=${MONGODB_URI}
+        - JWT_SECRET=${JWT_SECRET}
+        - DATABASE_NAME=${DATABASE_NAME}
+        - CHECKPOINT_PATH=${CHECKPOINT_PATH}
+        - REDIS_HOST=${REDIS_HOST}
+        - REMOTE_DOCKER_PASSWORD=${REMOTE_DOCKER_PASSWORD}
+        - BACKEND_BASE_URL=${BACKEND_BASE_URL}
     command: ["node", "dist/cron.bundle.js"]
     env_file:
       - .env
@@ -26,6 +62,24 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile
+      args:
+        - NODE_ENV=production
+        - GITHUB_TOKEN=${GITHUB_TOKEN}
+        - BRANCH=${BRANCH}
+        - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+        - AWS_ACCESS_KEY_SECRET=${AWS_ACCESS_KEY_SECRET}
+        - AWS_REGION=${AWS_REGION}
+        - AWS_ACCOUNT_ID=${AWS_ACCOUNT_ID}
+        - RABBITMQ_URL=${RABBITMQ_URL}
+        - DEPLOYMENT_ENV=${DEPLOYMENT_ENV}
+        - SPOT_INSTANCE_ID=${SPOT_INSTANCE_ID}
+        - MONGODB_URI=${MONGODB_URI}
+        - JWT_SECRET=${JWT_SECRET}
+        - DATABASE_NAME=${DATABASE_NAME}
+        - CHECKPOINT_PATH=${CHECKPOINT_PATH}
+        - REDIS_HOST=${REDIS_HOST}
+        - REMOTE_DOCKER_PASSWORD=${REMOTE_DOCKER_PASSWORD}
+        - BACKEND_BASE_URL=${BACKEND_BASE_URL}
     command: ["node", "dist/scheduler.bundle.js"]
     deploy:
       mode: replicated
