--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@t3-oss/env-nextjs": "^0.4.0",
     "@typegoose/typegoose": "^11.4.0",
     "amqplib": "^0.10.3",
+    "apollo-client": "^2.6.10",
     "aws-lambda": "^1.0.7",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
