--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/dockerode": "^3.3.19",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/inquirer": "^9.0.3",
     "@types/invariant": "^2.2.35",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.2.5",
@@ -64,6 +65,7 @@
     "graphql": "16.6.0",
     "graphql-request": "^6.1.0",
     "graphql-tag": "^2.12.6",
+    "inquirer": "^9.2.11",
     "invariant": "^2.2.4",
     "jsonwebtoken": "^9.0.1",
     "lru-cache": "^8.0.4",
