--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.10",
     "@apollo/server": "^4.9.1",
     "@aws-sdk/client-ec2": "^3.345.0",
     "@aws-sdk/client-ecr": "^3.395.0",
@@ -53,7 +52,6 @@
     "@t3-oss/env-nextjs": "^0.4.0",
     "@typegoose/typegoose": "^11.4.0",
     "amqplib": "^0.10.3",
-    "apollo-client": "^2.6.10",
     "aws-lambda": "^1.0.7",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
@@ -65,7 +63,7 @@
     "graphql": "16.6.0",
     "graphql-request": "^6.1.0",
     "graphql-tag": "^2.12.6",
-    "inquirer": "^9.2.11",
+    "inquirer-cjs": "^9.2.7",
     "invariant": "^2.2.4",
     "jsonwebtoken": "^9.0.1",
     "lru-cache": "^8.0.4",
