--- a/cli/package.json
+++ b/cli/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "cli",
+  "name": "fusion-cli",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
