--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "fusion": "./cli/index.js"
+  },
   "scripts": {
     "gc": "graphql-codegen --config codegen-server.yml",
     "build": "node scripts/build.js",
