--- a/cli/package.json
+++ b/cli/package.json
@@ -11,7 +11,9 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "graphql-request": "^6.1.0",
-    "inquirer": "^9.2.11"
+    "inquirer": "^9.2.11",
+    "yargs": "^17.7.2"
   }
 }
