--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "mongoose": "^7.4.1",
     "nanoid": "^4.0.2",
     "redis": "^4.6.7",
+    "redlock": "^5.0.0-beta.2",
     "throng": "^5.0.0",
     "ts-loader": "^9.4.4",
     "uuid": "^9.0.0",
