--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "graphql-tag": "^2.12.6",
     "inquirer-cjs": "^9.2.7",
     "invariant": "^2.2.4",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.1",
     "lru-cache": "^8.0.4",
     "mongoose": "^7.4.1",
