--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,11 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env*.local
-.env*
+.env.local
+.env.development
+.env.test
+.env.production
+.env
 # vercel
 .vercel
 
