--- a/infra/package.json
+++ b/infra/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@pulumi/aws": "^6.0.0",
         "@pulumi/awsx": "^2.0.2",
+        "@pulumi/command": "^0.9.2",
         "@pulumi/pulumi": "^3.0.0",
         "@t3-oss/env-nextjs": "^0.6.0",
         "dotenv": "^16.3.1",
