--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "aws-lambda": "^1.0.7",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "cli-table3": "^0.6.3",
     "cron": "^2.4.0",
     "dockerode": "^3.3.5",
     "dotenv": "^16.3.1",
