--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "Lua.diagnostics.globals": ["redis", "cjson", "ARGV"]
+    "Lua.diagnostics.globals": ["redis", "cjson", "ARGV"],
+    "cSpell.words": ["pulumi"]
 }
