--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/aws-lambda": "^8.10.117",
     "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.17",
     "@types/cron": "^2.4.0",
     "@types/dockerode": "^3.3.19",
     "@types/dotenv": "^8.2.0",
@@ -60,11 +61,12 @@
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
     "cli-table3": "^0.6.3",
+    "cors": "^2.8.5",
     "cron": "^2.4.0",
     "dockerode": "^3.3.5",
     "dotenv": "^16.3.1",
     "esbuild-plugin-inline-import": "^1.0.1",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
     "graphql": "16.6.0",
     "graphql-request": "^6.1.0",
     "graphql-tag": "^2.12.6",
