--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "gc": "graphql-codegen --config codegen-server.yml",
     "build": "node scripts/build.js",
     "dev:server": "ts-node packages/backend/index.ts",
+    "purge": "ts-node scripts/dev-utils/purge.ts",
     "infra:up": "npm run --prefix ./infra up",
     "infra:down": "npm run --prefix ./infra down",
     "infra:logs": "npm run --prefix ./infra logs",
     "infra:cleanup": "npm run --prefix ./infra cleanup",
-    "infra:preview": "npm run --prefix ./infra preview"
+    "infra:preview": "npm run --prefix ./infra preview",
   },
   "keywords": [],
   "author": "",
