--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "infra:down": "npm run --prefix ./infra down",
     "infra:logs": "npm run --prefix ./infra logs",
     "infra:cleanup": "npm run --prefix ./infra cleanup",
-    "infra:preview": "npm run --prefix ./infra preview",
+    "infra:preview": "npm run --prefix ./infra preview"
   },
   "keywords": [],
   "author": "",
@@ -64,7 +64,7 @@
     "cli-table3": "^0.6.3",
     "cors": "^2.8.5",
     "cron": "^2.4.0",
-    "dockerode": "^3.3.5",
+    "dockerode": "^4.0.2",
     "dotenv": "^16.3.1",
     "esbuild-plugin-inline-import": "^1.0.1",
     "express": "^4.18.3",
