--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@aws-sdk/client-ssm": "^3.385.0",
     "@t3-oss/env-nextjs": "^0.4.0",
     "@typegoose/typegoose": "^11.4.0",
+    "@types/eventsource": "^1.1.15",
     "amqplib": "^0.10.3",
     "aws-lambda": "^1.0.7",
     "axios": "^1.4.0",
@@ -67,6 +68,7 @@
     "dockerode": "^4.0.2",
     "dotenv": "^16.3.1",
     "esbuild-plugin-inline-import": "^1.0.1",
+    "eventsource": "^2.0.2",
     "express": "^4.18.3",
     "graphql": "16.6.0",
     "graphql-request": "^6.1.0",
