--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/dockerode": "^3.3.19",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/http-proxy": "^1.17.14",
     "@types/inquirer": "^9.0.3",
     "@types/invariant": "^2.2.35",
     "@types/jsonwebtoken": "^9.0.2",
@@ -73,6 +74,7 @@
     "graphql": "16.6.0",
     "graphql-request": "^6.1.0",
     "graphql-tag": "^2.12.6",
+    "http-proxy": "^1.18.1",
     "inquirer-cjs": "^9.2.7",
     "invariant": "^2.2.4",
     "ioredis": "^5.3.2",
