--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.6",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "invariant": "^2.2.4",
     "lucide-react": "^0.350.0",
     "next": "14.1.3",
     "react": "^18",
