--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@graphql-codegen/typescript-operations": "^3.0.0",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@graphql-codegen/typescript-resolvers": "^3.1.1",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/amqplib": "^0.10.1",
     "@types/aws-lambda": "^8.10.117",
     "@types/axios": "^0.14.0",
