Add favicon and app icons, update site manifest and layout, and add skeleton loading component

--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@graphql-codegen/typescript-operations": "^3.0.0",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@graphql-codegen/typescript-resolvers": "^3.1.1",
-    "@tailwindcss/typography": "^0.5.10",
     "@types/amqplib": "^0.10.1",
     "@types/aws-lambda": "^8.10.117",
     "@types/axios": "^0.14.0",
@@ -45,6 +44,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.2.5",
     "@types/redis": "^4.0.11",
+    "@types/ssh2": "^1.15.0",
     "@types/uuid": "^9.0.2",
     "esbuild": "^0.18.1",
     "ts-node": "^10.9.1",
@@ -86,6 +86,7 @@
     "nanoid": "^4.0.2",
     "redis": "^4.6.7",
     "redlock": "^5.0.0-beta.2",
+    "ssh2": "^1.15.0",
     "throng": "^5.0.0",
     "ts-loader": "^9.4.4",
     "uuid": "^9.0.0",
