Added logs and terminal ui

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@graphql-codegen/typescript-operations": "^3.0.0",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@graphql-codegen/typescript-resolvers": "^3.1.1",
+    "@graphql-tools/merge": "8.4.0",
     "@types/amqplib": "^0.10.1",
     "@types/aws-lambda": "^8.10.117",
     "@types/axios": "^0.14.0",
@@ -74,7 +75,7 @@
     "eventsource": "^2.0.2",
     "express": "^4.18.3",
     "graphql": "16.6.0",
-    "graphql-request": "^6.1.0",
+    "graphql-request": "^5.0.0",
     "graphql-tag": "^2.12.6",
     "http-proxy": "^1.18.1",
     "inquirer-cjs": "^9.2.7",
