--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@t3-oss/env-nextjs": "^0.4.0",
     "@typegoose/typegoose": "^11.4.0",
     "@types/eventsource": "^1.1.15",
+    "@types/express-ws": "^3.0.4",
     "amqplib": "^0.10.3",
     "aws-lambda": "^1.0.7",
     "axios": "^1.4.0",
@@ -74,6 +75,7 @@
     "esbuild-plugin-inline-import": "^1.0.1",
     "eventsource": "^2.0.2",
     "express": "^4.18.3",
+    "express-ws": "^5.0.2",
     "graphql": "16.6.0",
     "graphql-request": "^5.0.0",
     "graphql-tag": "^2.12.6",
