--- a/infra/docker/Dockerfile.proxy
+++ b/infra/docker/Dockerfile.proxy
@@ -5,6 +5,7 @@ RUN apk add --no-cache nodejs npm
 RUN mkdir /app
 WORKDIR /app
 COPY proxy.js .
+COPY reverse-proxy.js .
 COPY package.json .
 RUN npm i
 
