--- a/infra/Pulumi.yaml
+++ b/infra/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: infra-soul-forge
+name: infra-stardust
 runtime: nodejs
-description: IaaC for soul forge project
+description: IaaC for start dust project
