--- a/infra/package.json
+++ b/infra/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "infra-soul-forge",
+    "name": "infra-stardust",
     "main": "index.ts",
     "devDependencies": {
         "@types/node": "^16"
@@ -14,6 +14,7 @@
     "dependencies": {
         "@pulumi/aws": "^6.0.0",
         "@pulumi/awsx": "^2.0.2",
+        "@pulumi/cloudflare": "^5.22.0",
         "@pulumi/command": "^0.9.2",
         "@pulumi/pulumi": "^3.0.0",
         "@t3-oss/env-nextjs": "^0.6.0",
