--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "invariant": "^2.2.4",
     "lucide-react": "^0.350.0",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
