--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@types/invariant": "^2.2.35",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.2.5",
+    "@types/passport": "^1.0.16",
+    "@types/passport-github2": "^1.2.9",
     "@types/redis": "^4.0.11",
     "@types/ssh2": "^1.15.0",
     "@types/uuid": "^9.0.2",
@@ -88,6 +90,8 @@
     "mongoose": "^7.4.1",
     "nanoid": "^4.0.2",
     "node-ssh": "^13.1.0",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "random-words": "^2.0.1",
     "redis": "^4.6.7",
     "redlock": "^5.0.0-beta.2",
