Added github repo selector!

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@aws-sdk/client-ecr": "^3.395.0",
     "@aws-sdk/client-s3": "^3.348.0",
     "@aws-sdk/client-ssm": "^3.385.0",
+    "@octokit/rest": "^20.0.2",
     "@t3-oss/env-nextjs": "^0.4.0",
     "@typegoose/typegoose": "^11.4.0",
     "@types/eventsource": "^1.1.15",
