Refactor Dockerfile and scripts to use logger instead of proxy

--- a/infra/docker/Dockerfile.logger
+++ b/infra/docker/Dockerfile.logger
@@ -4,9 +4,9 @@ RUN apk update
 RUN apk add --no-cache nodejs npm
 RUN mkdir /app
 WORKDIR /app
-COPY proxy.js .
+COPY logger.js .
 COPY reverse-proxy.js .
 COPY package.json .
 RUN npm i
 
-CMD [ "node", "proxy.js" ]
+CMD [ "node", "logger.js" ]
